<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="apk.tamere.projet.pokemother.activity.BestActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textBestInput"
        android:layout_centerHorizontal="true"
        android:minWidth="150dp"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainMenuItemSpeak"
        android:id="@+id/buttonBestSpeak"
        android:layout_below="@+id/textBestInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="58dp"
        android:layout_marginStart="58dp" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonClear"
        android:layout_below="@+id/textBestInput"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="58dp"
        android:layout_marginEnd="58dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/buttonBestSpeak"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/rBGroup">

        <RadioButton
            android:id="@+id/rBFr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rB_fr"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rBGer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rB_ger"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rBUk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rB_uk"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rBIt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rB_it"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rBJap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rB_jap"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rBChi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rB_chi"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

</RelativeLayout>
