<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="apk.tamere.projet.pokemother.activity.DietActivity">

    <TextView
        android:id="@+id/textWhat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_what"
        android:layout_margin="@dimen/text_margin"/>

    <RadioGroup
        android:id="@+id/rgWhat"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@+id/textWhat">
        <RadioButton
            android:id="@+id/rgWhatR"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rb_what_recette"/>
        <RadioButton
            android:id="@+id/rgWhatI"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rb_what_ingredient"/>
        <RadioButton
            android:id="@+id/rgWhatA"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rb_what_aide"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rgWhat"
        android:text="@string/text_name"
        android:layout_margin="@dimen/text_margin"/>

    <EditText
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rgWhat"
        android:layout_toRightOf="@+id/textName"
        android:inputType="text" />

    <Button
        android:id="@+id/buttonSearch"
        android:text="@string/text_b_search"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textDiff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textName"
        android:layout_alignStart="@+id/textName"
        android:layout_below="@+id/textName"
        android:text="@string/text_diff"
        android:layout_marginTop="15dp"/>

    <Spinner
        android:id="@+id/cb_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textDiff"
        android:layout_toEndOf="@+id/textDiff"
        android:layout_toRightOf="@+id/textDiff"
        android:layout_marginLeft="15dp"/>
</RelativeLayout>
