<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".activity.WeatherActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weatherIconImageView"
        android:src="@drawable/icon_weather_na"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="42dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/temperature"
        android:id="@+id/temperatureTextView"
        android:layout_below="@+id/weatherIconImageView"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:typeface="serif"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/condition"
        android:id="@+id/conditionTextView"
        android:layout_below="@+id/temperatureTextView"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location"
        android:id="@+id/locationTextView"
        android:layout_below="@+id/conditionTextView"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/momMess"
        android:textSize="26dp"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weatherError"
        android:layout_centerHorizontal="true"
        android:text="@string/weather_info_mom"
        android:background="@drawable/shape_rectangle"
        android:backgroundTint="#e4e4e4"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/weatherError"
        android:textColor="@color/colorRed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
